# computer-simulator

./: Cargo.toml  README.md
assembler/: Cargo.toml
assembler/src/: asm.rs  assembler.rs  error.rs  instruction.rs  lib.rs  main.rs  markers.rs  parser.rs
generator/: Cargo.toml
generator/src/: common.rs  error.rs  lib.rs  main.rs  program.rs
instructions/: Cargo.toml
instructions/src/: instructions.rs  lib.rs
logisim/: computer.circ  cpu.circ
simulator/src/: memory.rs
simulator/src/components/: busone.rs  decoder.rs  gates.rs  iobus.rs  stepper.rs
simulator/src/cpu/: cpu.rs  mod.rs
simulator/src/gates/: mod.rs  nor.rs  or.rs  xor.rs
src/: alu.rs  computer.rs  lib.rs  main.rs  memory.rs
src/alu/: mod.rs
src/assembler/: assembler.rs  mod.rs
src/components/: adder.rs  bus.rs  busone.rs  comparator.rs  decoder.rs  gaters.rs  gates.rs  mod.rs  register.rs  stepper.rs  storage.rs
src/computer/: computer.rs  memory.rs  mod.rs
src/computer/components/: adder.rs  bus.rs  busone.rs  comparator.rs  decoder.rs  gaters.rs  gates.rs  iobus.rs  mod.rs  register.rs  stepper.rs
src/computer/cpu/: alu.rs  cpu.rs  mod.rs
src/computer/gates/: and.rs
src/computer/io/: display.rs  display_ram.rs  keyboard.rs  mod.rs
src/cpu/: alu.rs  cpu.rs  cu.rs  mod.rs
src/gates/: and.rs  mod.rs  nand.rs  nor.rs  not.rs  or.rs  xor.rs
src/generator/: common.rs  program.rs
src/glfw/: glfw.rs  mod.rs
src/instructions/: instructions.rs  markers.rs
src/io/: display.rs  display_ram.rs  keyboard.rs  mod.rs
src/memory/: mod.rs
