[package]
name = "computer-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={ version = "4.0.22", features = ["cargo", "derive"] }
futures = "0.3.27"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
thiserror = "1.0"
tokio = { version = "1.26.0", features = ["full"] }
[dependencies.glfw]
version = "*"
