[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assembler={path="../assembler"}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
clap={ version = "4.0.22", features = ["cargo", "derive"] }
thiserror = "1.0"
